# solana-actions

./: .gitignore  .prettierrc  README.md  hierarchy.html  index.html  modules.html  package-lock.json  package.json
assets/: navigation.js  search.js
classes/: ActionIdentifierError.html  CreatePostResponseError.html  EncodeURLError.html  FetchActionError.html  FindReferenceError.html  ParseURLError.html  SerializeTransactionError.html
enums/: SignMessageVerificationErrorType.html
examples/axum/: Cargo.toml  README.md
examples/axum/src/: main.rs
functions/: actionCorsMiddleware.html  actionHeaders.html  createActionHeaders.html  createActionIdentifierInstruction.html  createActionIdentifierMemo.html  createPostResponse.html  createSignMessageText.html  createSolanaQR.html  encodeURL.html  fetchTransaction.html  findReference.html  getActionIdentityFromEnv.html  parseSignMessageText.html  parseURL.html  serializeTransaction.html  validateActionIdentifierMemo.html  verifySignMessageData.html  verifySignatureInfoForIdentity.html
interfaces/: Action.html  ActionError.html  ActionGetRequest.html  ActionGetResponse.html  ActionParameter.html  ActionParameterSelectable.html  ActionPostRequest.html  ActionPostResponse.html  ActionPostResponseWithSerializedTransaction.html  ActionRequestURLFields.html  ActionRuleObject.html  ActionsJson.html  BlinkURLFields.html  CreateActionPostResponseArgs.html  InlineNextActionLink.html  LinkedAction.html  NextActionPostRequest.html  PostNextActionLink.html  SignMessageVerificationOptions.html
package/: README.md  package.json
(+103 files in other folders)
