[package]
name = "axum-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
solana-sdk = "1.18.17"
solana-client = "1.18.17"
tokio = { version = "1.37.0", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
serde = "1.0.198"
serde_json = "1.0.116"
bincode = "1.3.3"
base64 = "0.22.1"
